Fixed overlap

--- a/docs/assets/layout.css
+++ b/docs/assets/layout.css
@@ -268,13 +268,14 @@ br {
 }
 
 .template-credit {
-    position: absolute;
-    bottom: 10px;  /* This will place it 10px from the bottom */
-    left: 50%;
-    transform: translateX(-50%);
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
     font-size: 12px;
     z-index: 1000;
     color: var(--gray);
+	margin-top: 40px;
+    text-align: center;
 }
 
 .template-credit a {
